--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "qiniu": "^7.3.0"
   },
   "devDependencies": {
+    "@types/glob": "^7.1.3",
     "@types/jest": "^24.0.24",
     "@types/node": "^13.1.0",
     "@typescript-eslint/eslint-plugin": "^2.13.0",
